# gloom

./: .gitignore  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
gloom/: gloom.hpp  prelude.hpp
gloom/singletons/: OpenGL.hpp
gloom/utils/: exceptions.hpp
src/: test.cpp
src/singletons/: OpenGL.cpp
